--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -143,7 +143,7 @@
     "```{admonition} Example: Derivation of J/s\n",
     ":class: dropdown, tip\n",
     "$P = F\\cdot v$\\\n",
-    "$[$\\mathrm{J/s}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [$\\mathrm{kg m}^{2} $\\mathrm{s}^{-3}]$\n",
+    "$[\\mathrm{J/s}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [\\mathrm{kg m}^{2} \\mathrm{s}^{-3}]$\n",
     "```\n",
     "\n",
     "In the same way, based on units (dimensional analysis), you can derive formulas if you know which quantities may play a role. This will be discussed in much greater depth in the second-year course Physical Transport Phenomena. Would you like to know how to perform a dimensional analysis? Then take a look at this video:\n",
@@ -244,7 +244,7 @@
     "width: 80%\n",
     "name: fig:MO:systematic_error_fit_2\n",
     "---\n",
-    "Least-squares fit with correction for the systematische error: $F = \\frac{a}{(r+\\Delta r)^4}$ It is clear that the curve fits with all data.\n",
+    "Least-squares fit with correction for the systematic error: $F = \\frac{a}{(r+\\Delta r)^4}$ It is clear that the curve fits with all data.\n",
     "```\n",
     "\n",
     "### Random error\n",
@@ -297,7 +297,7 @@
     "\n",
     "```{admonition} Example: Interpolating readings\n",
     ":class: dropdown, tip\n",
-    "The best reading of the pointer in {numref}`Figure {number} <fig:MO:reading>` would be 17.3. The value is clearly between 17 and 17.5, closer to 17.5 than 17. The values 17 and 17.5 would be easy to read. Half of that is 0.25. The uncertainty is then 0.3 (we are not allowed to round down an uncertainty).\n",
+    "The best reading of the pointer in {numref}`Figure {number} <fig:MO:aflezen>` would be 17.3. The value is clearly between 17 and 17.5, closer to 17.5 than 17. The values 17 and 17.5 would be easy to read. Half of that is 0.25. The uncertainty is then 0.3 (we are not allowed to round down an uncertainty).\n",
     "```\n",
     "\n",
     "As you can see, there are not always fixed rules for determining measurement uncertainty, and sometimes it comes down to common sense and reasoning how you arrive at that value.\n",
@@ -313,7 +313,7 @@
     "**Measurement uncertainty in digital instruments**\\\n",
     "When reading a digital instrument, see {numref}`Figure {number} <fig:MO:digituitle>`, you would say that the uncertainty lies in the last decimal digit shown. However, the uncertainty of digital instruments is much greater than the last decimal digit; just think of the uncertainty when using a stopwatch. For devices used in physics practicals, this uncertainty is sometimes even determined by the age of the device and the time it has been switched on (warming up). For many digital (expensive) devices, the specifications state exactly how the measurement uncertainty should be calculated. \n",
     "\n",
-    "```{figure} Figures/digituitle.jpg\n",
+    "```{figure} Figures/meting_V.gif\n",
     "---\n",
     "width: 80%\n",
     "name: fig:MO:digituitle\n",
@@ -393,11 +393,11 @@
     "\n",
     "````{solution} ex-twee\n",
     ":class: dropdown\n",
-    "   1. $\\overline{x}$=0.14, $\\sigma$ = 0.034, $u$ = 0.02\n",
+    "   1. $\\overline{x}$=0.14, $\\sigma$ = 0.034, $u(x)$ = 0.02\n",
     "\n",
-    "   2. $\\overline{x}$=25.4, $\\sigma$ = 4.0, $u$ = 2\n",
+    "   2. $\\overline{x}$=25.4, $\\sigma$ = 4.0, $u(x)$ = 2\n",
     "\n",
-    "   3. $\\overline{x}$=2.99, $\\sigma$ = .23, $u$ = 0.1\n",
+    "   3. $\\overline{x}$=2.99, $\\sigma$ = .23, $u(x)$ = 0.1\n",
     "````\n",
     "\n",
     "### Weighted average\n",
@@ -501,47 +501,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy.optimize import curve_fit \n",
-    "from scipy.stats import norm, poisson\n"
+    "from scipy.stats import norm, poisson\n",
+    "from ipywidgets import interact\n",
+    "import ipywidgets as widgets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b301124ba44a46b2ac9d11bd794b91a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.0, description='average_value', max=3.0, min=-3.0, step=0.5), FloatS…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update(average_value, std_value)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Maken van 1000 random punten\n",
-    "x = np.random.normal(0,5,1000)\n",
     "\n",
-    "# Bereken van gemiddelde waarde en standaard deviatie\n",
-    "av_x = np.array([])\n",
-    "std_x = np.array([])\n",
-    "for i in range(1,len(x)-1):\n",
-    "    av_x = np.append(av_x,np.mean(x[:i]))\n",
-    "    std_x = np.append(std_x,np.std(x[:i],ddof=1))\n",
+    "def update(average_value,std_value):\n",
     "\n",
-    "# Plotten van de waarden als functie van N\n",
-    "fig, axs = plt.subplots(1,3,figsize=(15, 5))\n",
-    "axs[0].plot(x,'k.',markersize=1)\n",
-    "axs[0].set_xlabel('N')\n",
-    "axs[0].set_ylabel('')\n",
+    "    x = np.random.normal(average_value,std_value,1000)\n",
     "\n",
-    "axs[1].plot(av_x,'k.',ms=1)\n",
-    "axs[1].set_xlabel('N')\n",
-    "axs[1].set_ylabel('average of x as function of N')\n",
+    "    # Bereken van gemiddelde waarde en standaard deviatie\n",
+    "    av_x = np.array([])\n",
+    "    std_x = np.array([])\n",
+    "    for i in range(1,len(x)-1):\n",
+    "        av_x = np.append(av_x,np.mean(x[:i]))\n",
+    "        std_x = np.append(std_x,np.std(x[:i],ddof=1))\n",
     "\n",
-    "axs[2].plot(std_x,'k.',ms=1)\n",
-    "axs[2].set_xlabel('N')\n",
-    "axs[2].set_ylabel('standard deviation of x as function of N')\n",
+    "    # Plotten van de waarden als functie van N\n",
+    "    plt.clf()\n",
+    "    fig, axs = plt.subplots(1,3,figsize=(15, 5))\n",
+    "    axs[0].plot(x,'k.',markersize=1)\n",
+    "    axs[0].set_xlabel('N')\n",
+    "    axs[0].set_ylabel('')\n",
     "\n",
-    "plt.show()"
+    "    axs[1].plot(av_x,'k.',ms=1)\n",
+    "    axs[1].set_xlabel('N')\n",
+    "    axs[1].set_ylabel('average of x as function of N')\n",
+    "\n",
+    "    axs[2].plot(std_x,'k.',ms=1)\n",
+    "    axs[2].set_xlabel('N')\n",
+    "    axs[2].set_ylabel('standard deviation of x as function of N')\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "interact(update, average_value=widgets.FloatSlider(min=-3, max=3, step=.5, value=0),\n",
+    "         std_value=widgets.FloatSlider(min=0, max=10, step=1, value=1))"
    ]
   },
   {
@@ -561,8 +603,8 @@
     "    dataset = np.random.normal(1.00,0.5,samples) \n",
     "    mean_values = np.append(mean_values,np.mean(dataset))\n",
     "    \n",
-    "print('De standaard deviatie in het gemiddelde van herhaalde experimenten is: ', np.std(mean_values,ddof=1))\n",
-    "print('De onzekerheid in een enkele dataset is: ', np.std(dataset,ddof=1)/np.sqrt(samples))"
+    "print('The standard deviation in the mean of repeated experiments is: ', np.std(mean_values,ddof=1))\n",
+    "print('The uncertainty in a single dataset is: ', np.std(dataset,ddof=1)/np.sqrt(samples))"
    ]
   },
   {
@@ -578,17 +620,17 @@
     "\n",
     "The standard deviation in a Poisson distribution is equal to the square root of the mean ($\\sigma = \\sqrt{\\lambda}$).\n",
     "\n",
-    "````{admonition} Voorbeeld: Poisson\n",
+    "````{admonition} Example: Poisson\n",
     ":class: dropdown, tip\n",
-    "In een restaurant komen dagelijks gemiddeld 20 mensen eten. Hoe ziet de kansverdeling van het aantal mensen dat komt eten er uit? \\\n",
-    "De kansverdeling van het aantal bezoekers is weergegeven in {numref}`Figuur {number} <fig:MO:restaurant>` De kans wordt beschreven door: $P(X = k) = \\frac{20^k e^{-20}}{k!}$.\n",
+    "An average of 20 people eat at a restaurant every day. What does the probability distribution of the number of people who come to eat look like? \\\n",
+    "The probability distribution of the number of visitors is shown in {numref}`Figure {number} <fig:MO:restaurant>` The probability is described by: $P(X = k) = \\frac{20^k e^{-20}}{k!}$.\n",
     "\n",
     "```{figure} Figures/restaurant.png\n",
     "---\n",
     "width: 80%\n",
     "name: fig:MO:restaurant\n",
     "---\n",
-    "De kansverdeling van het aantal bezoekers van het restaurant.\n",
+    "The probability distribution of the number of visitors to the restaurant.\n",
     "```\n",
     "````\n",
     "\n",
@@ -600,8 +642,8 @@
     "$$\n",
     "P(x)= \n",
     "\\begin{cases}\n",
-    "    \\frac{1}{b-a},& \\text{als } a<x<b\\\\\n",
-    "    0,              & \\text{elders}\n",
+    "    \\frac{1}{b-a},& \\text{if } a<x<b\\\\\n",
+    "    0,              & \\text{elsewhere}\n",
     "\\end{cases}\n",
     "$$  (eq:uni_verd)\n",
     "\n",
@@ -611,11 +653,11 @@
     "p(X<x<X+dX) = \\int_{X}^{X+dX}\\frac{1}{b-a}dx\n",
     "$$\n",
     "\n",
-    "The expected value is simply being calculated y: \n",
+    "The expected value is simply being calculated by: \n",
     "\n",
     "$$ \\mu = \\frac{a+b}{2} $$ (eq:uni_gem)\n",
     "\n",
-    "and its standarddeviation by: \n",
+    "and its standard deviation by: \n",
     "\n",
     "$$ \\sigma = \\sqrt{\\frac{(b-a)^2}{12}} $$ (eq:uni_std)\n",
     "\n",
@@ -635,8 +677,9 @@
     "width: 50%\n",
     "name: fig:MO:montcarlintegraal\n",
     "---\n",
-    "Een voorbeeld van een Monte Carlo simulatie voor het berekenen van een integraal met behulp van een uniforme verdeling van random punten.\n",
+    "An example of a Monte Carlo simulation for calculating an integral using a uniform distribution of random points.\n",
     "```\n",
+    "\n",
     "### Chauvenet's criterium \n",
     "\n",
     "Repeated measurements lead to a better average. However, in repeated measurements, certain values can deviate significantly from the average. It can be tempting to simply write off a measurement point that deviates significantly from the rest as a measurement error. However, this quickly becomes data manipulation, which is not the intention. You can apply Chauvenet's criterion to see if the measurement point can be removed. Chauvenet's criterion is a rule of thumb (there are other, more complicated methods for determining whether you can remove data points, but we will not discuss them here). Chauvenet's criterion states that a measurement may be removed from the dataset if the probability of this is less than $\\frac{1}{2N}$ or $P(X)<\\frac{1}{2N}$.\n",
@@ -645,7 +688,7 @@
     "\n",
     "$$ N\\cdot P_{out} < 0.5 $$ (eq:criterium)\n",
     "\n",
-    "waar\n",
+    "where\n",
     "\n",
     "$$P_{out}=2Erf(x_{out},\\overline{x},\\sigma)$$ (eq:chauvenet)\n",
     "\n",
@@ -657,14 +700,14 @@
     "```{exercise} Outlier\n",
     ":class: dropdown\n",
     ":label: Outlier\n",
-    "Welke meting uit de serie 1b is verdacht? Gebruik het criterium van Chauvenet om te kijken of je deze meting mag uitsluiten.\n",
+    "Which measurement from series 1b is suspicious? Use Chauvenet's criterion to see if you can exclude this measurement.\n",
     "```\n",
     "\n",
     "````{solution} Outlier\n",
     ":class: dropdown\n",
     "$P_{out} = 2\\cdot \\text{Erf}(x = 19,\\overline{x} = 25.4,\\sigma = 4.0) = 2 \\cdot 0.05479929$\n",
     " \n",
-    "$N\\cdot P_{out} = 0.5479929 > 0.5$. We mogen het punt dus niet uitsluiten.\n",
+    "$N\\cdot P_{out} = 0.5479929 > 0.5$. We can not discard the measurement.\n",
     "````\n",
     "\n",
     "\n",
@@ -711,7 +754,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "#You could have also defined the Erf on your own\n",
@@ -764,14 +811,14 @@
     "\n",
     "*Answer:*\n",
     "\n",
-    "Eerst bepalen we de gemiddelde waarde $\\mu(U)=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000$ V. \\\n",
-    "Dan bepalen we de standaard deviatie $\\sigma(U) = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^N (U_i-\\overline{U})^2} = 0.038078866$ V.\\\n",
-    "Als laatste bepalen we de onzekerheid in de gemiddelde waarde $u(U) = \\frac{\\sigma(U)}{\\sqrt{N}} = 0.017029386$ V.\\\n",
-    "We hebben minder dan $10^3$ meetpunten, dus de onzekerheid ronden we af op 1 decimaal: $u(U) = 0.02$ V.\\\n",
-    "De onzekerheid heeft twee decimalen, dus hier passen we ons gemiddelde op aan: $\\overline{U} = 5.00 \\pm 0.02$ V.\n",
+    "First, we determine the mean value $\\mu(U)=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000 \\mathrm{V}$. \\\n",
+    "Then we determine the standard deviation $\\sigma(U) = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^N (U_i-\\overline{U})^2} = 0.038078866 \\mathrm{V}$.\n",
+    "Finally, we determine the uncertainty in the average value $u(U) = \\frac{\\sigma(U)} {\\sqrt{N}} = 0.017029386 \\mathrm{V}$.\n",
+    "We have fewer than $10^3$ measurement points, so we round the uncertainty to 1 decimal place: $u(U) = 0.02 \\mathrm{V}$.\n",
+    "The uncertainty has two decimal places, so we adjust our mean accordingly: $\\overline{U} = 5.00 \\pm 0.02 \\mathrm{V}$.\n",
     "````\n",
     "\n",
-    "There is another important point regarding rounding. If you were to round all fives up, you would introduce a systematic error; you always round up. The agreement is that if the number before the 5 is even, you round down (33.45 $\\rightarrow$ 33.4), and if the number before the 5 is odd, you round up (33.55 $\\rightarrow$ 33.6). In addition, in some fields it is good practice not to round down the uncertainty, as this prevents underestimating the uncertainty. However, we do not pay attention to this in physics practicals.\n",
+    "There is another important point regarding rounding. If you were to round all fives up, you would introduce a systematic error; you always round up. The agreement is that if the number before the $5$ is even, you round down ($33.45 \\rightarrow 33.4$), and if the number before the $5$ is odd, you round up ($33.55 \\rightarrow 33.6$). In addition, in some fields it is good practice not to round down the uncertainty, as this prevents underestimating the uncertainty. However, we do not pay attention to this in physics practicals.\n",
     "\n",
     "\n",
     "**Table:** Powers of 10, including their symbols. \n",
@@ -830,12 +877,12 @@
     "\n",
     "```{admonition} Voorbeeld: \n",
     ":class: dropdown, tip\n",
-    "*Vraag:* \n",
+    "*Question:* \n",
     "\n",
-    "Bereken de omtrek van een cirkel met straal\n",
+    "Calculate the circumference of a circle with a radius of \n",
     "$r = 2 \\pm 0.1 $ cm\n",
     "\n",
-    "*Antwoord:* \n",
+    "*Answer:* \n",
     "\n",
     "$O = 2\\pi r = 4.0\\pi \\approx 12.5664 $ cm\\\n",
     "$u(O) = \\frac{O(2+0.1) - O(2-0.1)}{2} = 2\\pi\\frac{2.1-1.9}{2} \\approx 0.628...$cm\\\n",
@@ -1449,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
