update with figs

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -875,7 +875,7 @@
     "$$u(Z) = Z(\\overline{x}+u(x)) - Z(\\overline{x})$$ (eq:func_eenvoudig)\n",
     "\n",
     "\n",
-    "```{admonition} Voorbeeld: \n",
+    "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
     "*Question:* \n",
     "\n",
@@ -921,7 +921,7 @@
     "\n",
     "A consequence of the linear approach to the error is that this method becomes less accurate as the error increases or the function exhibits strongly non-linear behavior.\n",
     "\n",
-    "```{admonition} Voorbeeld: \n",
+    "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
     "*Vraag:* \n",
     "\n",
@@ -971,7 +971,7 @@
     "3.  $(2.1 \\pm 0.2) $ g/cm$^3$\n",
     "````\n",
     "\n",
-    "```{admonition} Voorbeeld: \n",
+    "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
     "\n",
     "*Vraag:* \n",
@@ -1022,7 +1022,7 @@
     "Please note that if you have two values **A** and **B** that are close to each other and you subtract them from each other (**A**-**B**), your error may well be much greater than the difference between those two values. In such cases, you will need to look for alternative measurement methods that yield a smaller relative uncertainty. See below for an example for inspiration.\n",
     "\n",
     "\n",
-    "````{admonition} Voorbeeld: verkleinen meetonzekerheid:\n",
+    "````{admonition} Example: verkleinen meetonzekerheid:\n",
     ":class: dropdown, tip\n",
     "\n",
     "For an experiment, we want to determine the frequency difference $\\Delta f$ between two tones $f_0$ and $f_1$. After a measurement, it turns out that $f_0 = (1250 \\pm 3)$ Hz and $f_1 = (1248 \\pm 4)$ Hz. The difference (including uncertainty) is therefore $\\Delta f = (2 \\pm 5)$ Hz (check).\n",
@@ -1102,7 +1102,7 @@
     "One advantage of the Calculus method over the Functional Approach is that you can dimension your experiment: based on predefined criteria, you can specify how large the experiment should be, what characteristics it should have, and where most of the time and attention should be focused in order for it to meet the set criteria. The easiest way to explain this is with an example.\n",
     "\n",
     "\n",
-    "```{admonition} Voorbeeld: \n",
+    "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
     "You want to use a mass-spring system to accurately determine the mass of 10 different weights. The manufacturer states that the weights have a mass of (50 ± 3) g. However, you want to know the exact mass of each weight, accurate to the nearest gram. The maximum relative uncertainty is therefore 2%. What does the experiment look like?\n",
     "\n",
@@ -1235,7 +1235,7 @@
     "\n",
     "When experimenting, the goal is often to discover the relationship between two variables. In many cases, this relationship is not linear, for example between the swing time and length of a pendulum. In such cases, it is useful to linearize the graphs. Firstly, this makes it easier to see deviations, and secondly, it also makes fitting easier.\n",
     "\n",
-    "````{admonition} Voorbeeld:\n",
+    "````{admonition} Example:\n",
     ":class: dropdown, tip\n",
     "We want to determine the value of the acceleration due to gravity $g$. To do this, we take measurements between the period $T$ and the length $L$ of a pendulum.\n",
     "\n",
@@ -1284,7 +1284,7 @@
     "width: 50%\n",
     "name: fig:MO:slechtegrafiek\n",
     "---\n",
-    "Een goed voorbeeld van een slechte grafiek\n",
+    "A great example of an ugly graph\n",
     "```\n",
     "{numref}`Figuur {number} <fig:MO:beteregrafiek>` presents the same data. The differences may be clear, the data are displayed on a log-log scale, and a trend line shows the relationship between force and distance. The number of ticks is limited. The graph could be further improved by including the measurement uncertainty.\n",
     "```{figure} Figures/beteregrafiek.png\n",
@@ -1298,13 +1298,13 @@
     "\n",
     "## Further reading\n",
     "\n",
-    "Enkele bronnen die gaan over het gebruik van data en meetonzekerheid:\\\n",
+    "Some external sources on the use of data and measurement uncertainty:\\\n",
     "[Guide to the expression of uncertainty in measurement](https://www.bipm.org/utils/common/documents/jcgm/JCGM_100_2008_E.pdf)\\\n",
     "[Liegen met cijfers](https://www.libris.nl/boek/?authortitle=darrell-huff/liegen-met-cijfers--9789492790156)\\\n",
     "[Het bestverkochte boek ooit](https://kiosk.decorrespondent.nl/products/het-bestverkochte-boek-ooit-met-deze-titel-sanne-blauw-boek)\n",
     "\n",
     "\n",
-    "## Oefeningen\n",
+    "## Exercises\n",
     "```{exercise}\n",
     ":label: ex-unc\n",
     ":class: dropdown\n",
