--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -224,7 +224,7 @@
     "\n",
     "To find out whether there is a systematic error in your data, you can check this using Python, for example. This is best explained using an example.\n",
     "\n",
-    "```{admonition} Example: Systematische error\n",
+    "```{admonition} Example: Systematic error\n",
     ":class: dropdown, tip\n",
     "You are conducting research into the influence of distance on force. To do this, you measure the distance, but you are concerned that there may be a systematic error in the mutual distance $r$ because that distance cannot be measured accurately. If you investigate the expected relationship $F = \\frac{a}{r^4}$, you can try to fit the function $F = \\frac{a}{(r+\\Delta r)^4}$. In the ideal situation, without systematic error, $\\Delta r$ is equal to 0. If this produces a better fit for $\\Delta r \\neq 0$ ({numref}`Figure {number} <fig:systematic_error_fit>`), then $\\Delta r$ may be your systematic error. Of course, you then need to investigate whether this value is reasonable and can be explained.\n",
     "```\n",
@@ -468,7 +468,8 @@
    "execution_count": 6,
    "metadata": {
     "tags": [
-     "hide-input"
+     "hide-input",
+     "remove-output"
     ]
    },
    "outputs": [
