Minor grammar fixes

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -13,12 +13,12 @@
    "source": [
     "## Pre/Post-test<a class=\"anchor\" id=\"section_1_0\"></a>\n",
     "This test is for testing your current skills in Python. You can use it in two ways:\n",
-    "* pre-test: to test your skills beforehand. If you are already proficient in Python, and can do this test within approximately 15 minutes, you can scan through the notebook rather than carfefully reading each sentence.\n",
+    "* pre-test: to test your skills beforehand. If you are already proficient in Python, and can do this test within approximately 15 minutes, you can scan through the notebook rather than carefully reading each sentence.\n",
     "* post-test: test your skills after Notebook 6. Check whether you learned enough.\n",
     "\n",
     "**Diode**\n",
     "\n",
-    "In an experiment 10 measurements were taken of the voltage over and current through a Si-diode. The results are displayed in the following table together with their uncertainties:\n",
+    "In an experiment, 10 measurements were taken of the voltage over and current through a Si-diode. The results are displayed in the following table, together with their uncertainties:\n",
     "\n",
     "| I (μA) | $\\alpha_I$ (μA)| V (mV)| $\\alpha_V$ (mV)| \n",
     "| ---   | ---     | ---   | --- |\n",
@@ -42,14 +42,14 @@
     "\n",
     "The diode is expected to behave according to the following relation: $I = a(e^{bV}-1)$, where $a$ and $b$ are unknown constants. \n",
     "\n",
-    "**Exercise:** Use the curve_fit function to determine whether this is a valid model to describe the dataset. Is the found parameter $a$ in agreement with the value found in another experiment $a_{2} = 2.0 \\pm 0.5 \\mathrm{nA}$?\n",
+    "**Exercise:** Use the curve_fit function to determine whether this is a valid model to describe the dataset. Is the value found for parameter $a$ in agreement with the value found in another experiment $a_{2} = 2.0 \\pm 0.5 \\mathrm{nA}$?\n",
     "\n",
     "*Hint: use a logscale on the y-axis*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,14 +112,14 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In physics experiments, you try to record relationships or certain values as accurately as possible. What exactly “as accurately as possible” means remains unclear for now. What is hopefully clear right away is that we can almost never determine those values directly. We conduct various experiments to collect data that we can use to determine the relationship and then establish the various parameters in that relationship as accurately as possible. \n",
+    "In physics experiments, you try to determine relationships or certain values as accurately as possible. What “as accurately as possible” actually means remains unclear for now. What is hopefully clear right away is that we can almost never determine those values directly. We conduct various experiments to collect data that we can use to determine the relationship and then establish the various parameters in that relationship as accurately as possible. \n",
     "\n",
     "However, it is never possible to determine the exact value(s) of those parameters: with each new measurement, there will be small fluctuations (especially if you measure very precisely). Over time, we have been able to improve our experiments and take more measurements in less time. This means that, over the course of history, constants such as Planck's constant have been determined with increasing accuracy and that the value has varied over the years.\n",
     "\n",
-    "The consequence of never being able to determine a value precisely is that when you work with that value, your final answer will never be perfect (determined). There will always be uncertainty about what the exact value actually is. In this chapter, you will learn how the uncertainty in a measured value affects the final answer (you already know the basics, significant figures and associated calculation rules), and how to minimize that uncertainty.\n",
+    "The consequence of never being able to determine a value precisely is that when you work with that value, your final answer will never be perfect (determined). It will always be uncertain what the exact value actually is. In this chapter, you will learn how the uncertainty in a measured value affects the final result (you already know the basics, significant figures and associated calculation rules), and how to minimize that uncertainty.\n",
     "\n",
     "```{note}\n",
-    "The terms measurement error and measurement uncertainty are often used interchangeably. In many cases, measurement uncertainty would be a more accurate description of what is meant. A measurement error implies that you are doing something truly *wrong*, without being able to do anything about it. The error arises inherently from the use of an instrument, from the measurement itself. In that case, it would be more accurate to talk about uncertainty. Although we try to make a careful distinction here, in general language use the two terms are often unintentionally interchanged. \n",
+    "The terms *measurement error* and *measurement uncertainty* are often used interchangeably. In many cases, measurement uncertainty would be a more accurate description of the situation. A measurement error implies that you are doing something truly *wrong*, without being able to do anything about it. The error arises inherently from the use of an instrument, from the measurement itself. In that case, it would be more accurate to talk about uncertainty. Although we try to make a careful distinction here, in general language use the two terms are often unintentionally interchanged. \n",
     "\n",
     "```\n",
     "\n",
@@ -146,7 +146,8 @@
     "$[\\mathrm{J/s}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [\\mathrm{kg m}^{2} \\mathrm{s}^{-3}]$\n",
     "```\n",
     "\n",
-    "In the same way, based on units (dimensional analysis), you can derive formulas if you know which quantities may play a role. This will be discussed in much greater depth in the second-year course Physical Transport Phenomena. Would you like to know how to perform a dimensional analysis? Then take a look at this video:\n",
+    "Similarly, based on units (dimensional analysis), you can derive formulas if you know which quantities may play a role. This will be discussed in much greater depth in the second-year course Physical Transport Phenomena. \n",
+    "Would you like to know how to perform a dimensional analysis? Then take a look at this video:\n",
     "\n",
     "<div style=\"display: flex; justify-content: center;\">\n",
     "    <div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
@@ -165,7 +166,7 @@
     "```{exercise}\n",
     ":label: ex-eenh\n",
     ":class: dropdown\n",
-    "Provided the equation $F=k \\cdot v^2$, what is the unit of $k$ expressed SI-units (kg,m,s,C,K)?\n",
+    "Provided the equation $F=k \\cdot v^2$, what is the unit of $k$ expressed in SI-units (kg,m,s,C,K)?\n",
     "```\n",
     "\n",
     "````{solution} ex-eenh\n",
@@ -212,7 +213,7 @@
     "\n",
     "### Systematic error\n",
     "\n",
-    "In addition to influencing the measurement of your physical quantity by measuring it, there are other causes that can lead to ‘errors’. We distinguish between *systematic errors* and *random errors*. A systematic error will always be the same size, and therefore causes a deviation in your average result. Such an error strongly influences your final result. Fortunately, you can correct for this. Examples of systematic errors are a zero point error and a calibration error, see for example {numref}`Figure {number} <fig:MO:sysfout>`.\n",
+    "In addition to influencing the measurement of your physical quantity by measuring it, there are other causes that can lead to ‘errors’. We distinguish between *systematic errors* and *random errors*. A systematic error will always be the same size, and therefore causes a deviation in your average result. Such an error strongly influences your final result. Fortunately, you can correct for this type of error. Examples of systematic errors are a zero point error and a calibration error, see for example {numref}`Figure {number} <fig:MO:sysfout>`.\n",
     "\n",
     "```{figure} Figures/Meetfout.png\n",
     "---\n",
@@ -226,7 +227,7 @@
     "\n",
     "```{admonition} Example: Systematic error\n",
     ":class: dropdown, tip\n",
-    "You are conducting research into the influence of distance on force. To do this, you measure the distance, but you are concerned that there may be a systematic error in the mutual distance $r$ because that distance cannot be measured accurately. If you investigate the expected relationship $F = \\frac{a}{r^4}$, you can try to fit the function $F = \\frac{a}{(r+\\Delta r)^4}$. In the ideal situation, without systematic error, $\\Delta r$ is equal to 0. If this produces a better fit for $\\Delta r \\neq 0$ ({numref}`Figure {number} <fig:systematic_error_fit>`), then $\\Delta r$ may be your systematic error. Of course, you then need to investigate whether this value is reasonable and can be explained.\n",
+    "You are conducting research into the influence of distance on force. To do this, you measure the distance, but you are concerned that there may be a systematic error in the distance $r$ because that distance cannot be measured accurately. If you investigate the expected relationship $F = \\frac{a}{r^4}$, you can try to fit the function $F = \\frac{a}{(r+\\Delta r)^4}$. In the ideal situation, without systematic error, $\\Delta r$ is equal to 0. If this formula produces a better fit for $\\Delta r \\neq 0$ ({numref}`Figure {number} <fig:systematic_error_fit>`), then $\\Delta r$ may be your systematic error. Of course, you then need to investigate whether this value is reasonable and can be explained.\n",
     "```\n",
     "\n",
     "In {numref}`Figure {number} <fig:systematic_error_fit>`, you can see the difference between a fit with and without compensation for systematic error. Although the upper figure appears to be a good fit, you can see that the fit in the lower figure is even better across all measurements. Later, we will look at how we can investigate such errors more systematically.\n",
@@ -255,7 +256,7 @@
     "\n",
     "### Instrumental uncertainties\n",
     "\n",
-    "Every instrument you use has certain limitations. The uncertainty may lie in reading the instrument, but also in the instrument itself, and then also in the value of the measured quantity. In addition, you must first calibrate (some) instruments before using them. An error in calibration can lead to a systematic error.\n",
+    "Every instrument you use has certain limitations. The uncertainty may be dependent on reading the instrument, but also on the instrument itself, or on the value of the measured quantity. In addition, you must first calibrate (some) instruments before using them. An error in calibration can lead to a systematic error.\n",
     "\n",
     "When using instruments, the terms *precision* and *accuracy* are often used. Precision refers to the small spread in the measurements. Precision is closely related to random errors. Accuracy refers to how close the measurements are to the desired value. Accuracy is closely related to systematic errors. The four variants that you can have are shown in {numref}`Figure {number} <fig:MO:precision>`.\n",
     "\n",
@@ -279,8 +280,7 @@
     "If the designation involves a ranking, we refer to an ordinal scale. An example is giving grades for academic performance. Someone with a 10 knows more than someone with a 5, but that person does not know twice as much. Also, the difference in knowledge between a 5 and a 6 is usually incomparable to the difference between a 9 and a 10.\n",
     "\n",
     "**3. Interval scale**\\\n",
-    "A scale on which equal differences mean the same thing but ratios do not is called an interval scale. On an interval scale, the zero point is arbitrary. The Celsius scale is an example of this. 100 ˚C is not twice as high a temperature as 50 ˚C, but the temperature difference between 50 ˚C and 51 ˚C is the same as between 100 ˚C and 101 ˚C.\n",
-    "\n",
+    "A scale on which equal differences mean the same thing but ratios do not, is called an interval scale. On an interval scale, the zero point is arbitrary. The Celsius scale is an example of this. 100 ˚C is not twice as high a temperature as 50 ˚C, but the temperature difference between 50 ˚C and 51 ˚C is the same as between 100 ˚C and 101 ˚C.\n",
     "\n",
     "**4. Ratio scale**\\\n",
     "If, in addition to differences, we can also use ratios of measurement results in a meaningful way, then the measurement takes place on a ratio scale. Measuring lengths is an example. A table that is 2 m wide is twice as wide as a table that is 1 m wide. We strive to bring measurement to the level of a ratio scale. An example is the transition from the Celsius scale to the absolute temperature scale (the Kelvin scale).\n",
@@ -290,10 +290,10 @@
     "```\n",
     "\n",
     "**Measurement uncertainty in analog instruments**\\\n",
-    "With analog instruments, you have to read the value, see {numref}`Figure {number} <fig:MO:aflezen>`. In some cases, there is a mirror behind the pointer so that you don't make a mistake by reading the pointer at an angle. In addition, you cannot read the value with infinite precision. Think of a measuring stick that allows you to measure accurately to the nearest millimeter, but where distances between millimeters cannot be determined accurately, especially when the lines on the ruler are thick. When reading an analog meter, you must estimate the associated uncertainty:\n",
+    "With analog instruments, you have to read the value, see {numref}`Figure {number} <fig:MO:aflezen>`. In some cases, there is a mirror behind the pointer so that you don't make a mistake by reading the pointer at an angle. Furthermore, you cannot read the value with infinite precision. Think of a measuring stick that allows you to measure accurately to the nearest millimeter, but where distances between millimeters cannot be determined accurately, especially when the lines on the ruler are thick. When reading an analog meter, you must estimate the associated uncertainty:\n",
     "* Read the value as accurately as possible. \n",
     "* Determine the values that you can still read *accurately*.\n",
-    "* Then take half of the value between two values that still need to be determined as a measure of uncertainty.\n",
+    "* Then take half of the difference between two values that you can accurately read as a measure of uncertainty.\n",
     "\n",
     "```{admonition} Example: Interpolating readings\n",
     ":class: dropdown, tip\n",
@@ -354,10 +354,10 @@
     "width: 80%\n",
     "name: fig:MO:noisegen\n",
     "---\n",
-    "Het genereren van ruis weergegeven als punten en in een histogram. Links onder de standaard deviatie (convergeert) en rechtsonder de meetonzekerheid (wordt kleiner met $\\frac{1}{\\sqrt{N}}$).\n",
+    "Noise generation shown as points and in a histogram. Bottom left the standard deviation (convergent) and bottom right the measurement uncertainty (decreases with $\\frac{1}{\\sqrt{N}}$).\n",
     "```\n",
     "\n",
-    "The measurement uncertainty is equal to the deviation of the mean of repeated experiments. That is, if the entire experiment is repeated, there will always be a difference in the mean found. The standard deviation of this is equal to $u(x)$, or, there is a roughly 2/3 chance that when the entire experiment is repeated, the average will lie between $\\overline{x} \\pm u(x)$. The code below shows how you could verify this statement.\n",
+    "The measurement uncertainty is equal to the deviation of the mean of repeated experiments. That is, if the entire experiment is repeated, there will always be a difference in the determined mean. The standard deviation of this mean is equal to $u(x)$, or, there is a roughly 2/3 chance that when the entire experiment is repeated, the average will lie between $\\overline{x} \\pm u(x)$. The code below shows how you could verify this statement.\n",
     "\n",
     "```{tip}\n",
     "To run and modify the code below, press the rocket at the top of the page. After loading the necessary packages, you can get started!\n",
@@ -1518,7 +1518,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1532,7 +1532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
